--- a/android/dependencies.gradle
+++ b/android/dependencies.gradle
@@ -1,11 +1,11 @@
 dependencies {
     // logback
-    implementation 'com.github.tony19:logback-android:1.1.1-9'
-    implementation 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.github.tony19:logback-android:1.1.1-9'
+    compile 'org.slf4j:slf4j-api:1.7.21'
     // android-permissions
-    implementation('com.intentfilter:android-permissions:0.1.7') {
+    compile('com.intentfilter:android-permissions:0.1.7') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
     // promises
-    implementation 'com.github.jparkie:promise:1.0.3'
+    compile 'com.github.jparkie:promise:1.0.3'
 }
